 - Fixed an error in Zotero's Advanced Search dialog.
 - Added support for gadgets in Google Toolbar 5.
 - Added support for the ErrorZilla Plus, WebChunks, and pyshell extensions.

Version 20080728.250 (Sunday, November 2, 2008)
 - AVIM now works on all XUL windows and dialog boxes in the supported
   applications, whether built-in or provided by third-party extensions.
 - Added support for upcoming releases of Sunbird 1.0 and Spicebird 0.7.
 - Added Edit > Vietnamese Input menu to most SeaMonkey windows.
 - Reduced installer package size further by compressing JavaScript files. The
   original, uncompressed scripts can be found in AVIM's Subversion repository.

Version 20080728.265 (Monday, December 8, 2008)
 - Added support for Firefox 3.2 nightlies.
 - Fixed an issue in preference windows where AVIM prevents the initial pane
   from loading, due to Bug 330458.
 - Fixed an issue that prevented the toolbar buttons from displaying.
 - The toolbar buttons now appear disabled when AVIM is turned off.
 - XaLo's version of AVIM is now recognized and disabled.

Version 20080728.280 (Saturday, January 17, 2008)
 - Added an option to allow diacritics in password boxes. Use caution when using
   accented passwords on a website; the website may not handle Unicode passwords
   properly.
 - Fixed an issue where the option to use Telex while in Auto was mislabeled.
 - Fixed an issue where specialized textboxes would not update after editing a
   word that begins with an accented letter. Affected textboxes include the Find
   Bar and Location Bar in Firefox and the Subject bar in Thunderbird.
 - Fixed an issue where bookmark properties would not save when edited from
   within the Library.
 - Tweaked some spelling rules to prevent invalid vowel sequences.
 - Updated support for the latest BlueGriffon nightlies.
 - Fixed editing in BlueGriffon's rich text editor with AVIM enabled.

Version ${Version} (${Date})