@@ -435,19 +435,6 @@ function AVIM()	{
 		else panel.setAttribute("label", panel.getAttribute("disabledLabel"));
 		panel.style.display =
 			AVIMConfig.statusBarPanel ? "-moz-box" : "none";
-		
-		// IME and DiMENSiON extension
-		if (window.getIMEStatus) {
-			var getStatus = getIMEStatus;
-			getIMEStatus = function () {
-				try {
-					return AVIMConfig.onOff || getStatus();
-				}
-				catch (e) {
-					return AVIMConfig.onOff;
-				}
-			}
-		}
 	};
 	
 	/**
@@ -1517,6 +1504,19 @@ function AVIM()	{
 		
 		return this.keyPressHandler(e);
 	};
+	
+	// IME and DiMENSiON extension
+	if (window.getIMEStatus) {
+		var getStatus = getIMEStatus;
+		getIMEStatus = function () {
+			try {
+				return AVIMConfig.onOff || getStatus();
+			}
+			catch (e) {
+				return AVIMConfig.onOff;
+			}
+		}
+	}
 };
 
 if (!window.avim && !window.frameElement) {
