@@ -229,3 +229,4 @@ Version 20080728.280 (Saturday, January 17, 2008)
  - Fixed editing in BlueGriffon's rich text editor with AVIM enabled.
 
 Version ${Version} (${Date})
+ - Added experimental support for the IME and DiMENSiON extension.
